[gd_scene load_steps=13 format=2]

[ext_resource path="res://Unit/ui_hp.gd" type="Script" id=1]
[ext_resource path="res://Unit/Follower/Dieck/dieck.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Unit/Follower/follower.gd" type="Script" id=3]
[ext_resource path="res://Unit/ui_sp.gd" type="Script" id=4]
[ext_resource path="res://Unit/Range/range_indicator.tscn" type="PackedScene" id=5]
[ext_resource path="res://Unit/ui_skill_range.gd" type="Script" id=6]
[ext_resource path="res://Unit/unit_view.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.890196, 0.705882, 0.384314, 1 )

[sub_resource type="GDScript" id=2]
script/source = "extends ProgressBar


onready var hp_ui = $\"../HP\"


func _process(_delta):
	visible = hp_ui.visible
"

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.603922, 1, 0.270588, 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[node name="Unit" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}
base_max_hp = 200
base_atk = 50
base_def = 20

[node name="View" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Sprite" type="AnimatedSprite" parent="View"]
scale = Vector2( 4, 4 )
frames = ExtResource( 2 )
playing = true
centered = false
offset = Vector2( -8, -16 )

[node name="UI" type="Node2D" parent="View"]
position = Vector2( 20, 40 )
z_index = 1

[node name="Shield" type="ProgressBar" parent="View/UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 16.0
margin_right = 45.0
margin_bottom = 20.0
custom_styles/fg = SubResource( 1 )
value = 100.0
percent_visible = false
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="ProgressBar" parent="View/UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 16.0
margin_right = 45.0
margin_bottom = 20.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SP" type="ProgressBar" parent="View/UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = 20.0
margin_right = 45.0
margin_bottom = 24.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 4 )
percent_visible = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ranges" type="Node2D" parent="View"]

[node name="Skill Range" parent="View/Ranges" instance=ExtResource( 5 )]
script = ExtResource( 6 )
inactive_color = Color( 0.78125, 0.512695, 0.512695, 0.501961 )
active_color = Color( 0.72549, 0.619608, 0.458824, 0.501961 )
marked_color = Color( 0.768627, 0.462745, 0.956863, 0.501961 )

[node name="DeathTweener" type="Tween" parent="View"]

[node name="Skills" type="Node" parent="."]

[node name="Statuses" type="Node" parent="."]

[connection signal="damage_dealt" from="." to="View" method="_on_Unit_damage_dealt"]
[connection signal="damage_taken" from="." to="View" method="_on_Unit_damage_taken"]
[connection signal="dead" from="." to="View" method="_on_Unit_dead"]
[connection signal="hovered" from="." to="View" method="_on_Unit_hovered"]
[connection signal="unhovered" from="." to="View" method="_on_Unit_unhovered"]
